--- a/my-duos-project/platform-device/Makefile
+++ b/my-duos-project/platform-device/Makefile
@@ -1,6 +1,6 @@
 # 编译器配置
 export ARCH=riscv
-export CROSS_COMPILE=/home/cybersyn/duos/duo-buildroot-sdk-v2/host-tools/gcc/riscv64-linux-musl-x86_64/bin/riscv64-unknown-linux-musl-
+export CROSS_COMPILE=/home/cybersyn/duo-buildroot-sdk-v2/host-tools/gcc/riscv64-linux-musl-x86_64/bin/riscv64-unknown-linux-musl-
 
 # 模块名称
 obj-m := platform_led.o
@@ -10,7 +10,7 @@ SRC_DIR := src
 OBJ_DIR := obj
 
 # 内核源码目录
-kdir := /home/cybersyn/duos/duo-buildroot-sdk-v2/linux_5.10
+kdir := /home/cybersyn/duo-buildroot-sdk-v2/linux_5.10/build/sg2000_milkv_duos_musl_riscv64_sd/
 
 # 启用详细输出（这有助于bear捕获命令）
 V ?= 0
