--- a/my-duos-project/Makefile/usermode/Makefile
+++ b/my-duos-project/Makefile/usermode/Makefile
@@ -12,7 +12,7 @@ SRCS ?= ssd1306_misc_user.c
 OBJS := $(SRCS:.c=.o)
 
 # Keep these flags so bear/clangd learns the target + sysroot.
-COMMON := --target=riscv64-unknown-linux-musl --sysroot=$(SYSROOT) -march=rv64gcxthead -mabi=lp64d
+COMMON := --sysroot=$(SYSROOT)
 
 CFLAGS  ?= -O2 -Wall $(COMMON)
 LDFLAGS ?= $(COMMON)
